--- a/styles.css
+++ b/styles.css
@@ -1,23 +1,31 @@
 .container {
     display: flex;
     flex-direction: column;
+    align-items: center;
     background-color: #1F2937;
-    row-gap: 1;
+    height: auto;
+    column-gap: 8px;
+    
 
 }
 
 .header {
     display: flex;
+    flex-direction: row;
     justify-content: flex-start;
-    column-gap: 1;
+    
 }
 
-/* .header .link {
-    display: flex;
+ .header .link {
     justify-content: flex-end;
 
 
-} */
+
+} 
+
+.header .logo {
+    margin-left: auto;
+}
 
 .header a {
     text-decoration-line: none;
@@ -28,6 +36,7 @@
 .logo img {
     width: 70px;
     height: 30px;
+    background-color: #E5E7EB;
 }
 
 .info {
@@ -44,9 +53,41 @@
 .info p {
     color: #E5E7EB;
     font-size: 18px;
+    text-align: justify;
+
 }
 
 .info-image img {
     border-radius: 8px;
-    width: 350px;
+    height: 200px;
+}
+
+.second-sec .dimension {
+    width: 400px;
+    height: 200px;
+    border-radius: 8px;
+}
+.second-sec .images {
+    width: fit-content;
+}
+
+.section {
+    display: flex;
+    flex-direction: column;
+    justify-content: cenetr;
+    background-color: #F9FAF8;
+    gap: 1;
+}
+
+.second-sec {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 8px;
+
+}
+
+.section h2 {
+    text-align: center;
 }
