--- a/styles.css
+++ b/styles.css
@@ -1,31 +1,27 @@
 .container {
     display: flex;
     flex-direction: column;
-    align-items: center;
     background-color: #1F2937;
-    height: auto;
-    column-gap: 8px;
+    justify-content: flex-start;
+    row-gap: 70px;
     
-
 }
 
 .header {
     display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
+    justify-content: center;
+    gap: 18px;
+    margin-top: 5px;
     
 }
 
- .header .link {
-    justify-content: flex-end;
+.header .logo {
+    margin-right: 740px;
 
 
 
 } 
 
-.header .logo {
-    margin-left: auto;
-}
 
 .header a {
     text-decoration-line: none;
@@ -42,7 +38,7 @@
 .info {
     display: flex;
     justify-content: center;
-    flex-wrap: wrap;
+
 }
 
 .info h1 {
@@ -53,13 +49,14 @@
 .info p {
     color: #E5E7EB;
     font-size: 18px;
-    text-align: justify;
+    text-align: center;
 
 }
 
 .info-image img {
     border-radius: 8px;
     height: 200px;
+    width: 500px;
 }
 
 .second-sec .dimension {
@@ -76,7 +73,6 @@
     flex-direction: column;
     justify-content: cenetr;
     background-color: #F9FAF8;
-    gap: 1;
 }
 
 .second-sec {
@@ -84,10 +80,57 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
-    gap: 8px;
+    gap: 50px;
 
 }
 
 .section h2 {
     text-align: center;
+}
+
+.images p {
+    text-align: center;
+}
+
+.quote {
+    display: flex;
+    flex-direction: column;
+    background-color: #E5E7EB;
+    justify-content: center;
+    padding: 30px 70px;
+}
+
+.quote .cite {
+    align-self: flex-end;
+    
+    
+
+}
+.quote .quote-text {
+    text-align: justify;
+    font-size: 36px;
+    color: #1F2937;
+}
+
+.footer {
+    background-color: #1F2937;
+    text-align: center;
+    color: #F9FAF8;
+
+}
+
+.action {
+    padding: 30px 70px;
+}
+
+.move {
+    display: flex;
+    column-gap: 20px;
+    justify-content: center;
+    border-radius: 5px;
+}
+
+.move, .bs {
+    background-color: #3882F6;
+    color: #E5E7EB;
 }
